IFATQCZZ118 - Re-factored project to use single convention and deleted unused methods