@@ -1,25 +1,24 @@
 package academy.softserve.edu.utils;
 
-
 import com.google.common.collect.Ordering;
 import org.openqa.selenium.WebElement;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
+public final class SortUtil {
 
-public class SortUtil {
+    private SortUtil() {
+
+    }
 
     public static final boolean isListSortedByAsc(final List<WebElement> elementsList) {
 
-       final List<String> gridsColumnValues = elementsList
-                .stream()
+        final List<String> gridsColumnValues = elementsList.stream()
                 .map(WebElement::getText)
-                .collect(Collectors
-                        .toList());
+                .collect(Collectors.toList());
 
-        return Ordering
-                .natural()
+        return Ordering.natural()
                 .isOrdered(gridsColumnValues);
     }
 
@@ -27,28 +26,23 @@ public class SortUtil {
     //Pull Double to List from list of elements.
     public final static boolean isListDoubleSortedByDescend(final List<WebElement> elementsList) {
 
-        final List<Double> gridsColumnDoubleValues = elementsList
-                .stream()
+        final List<Double> gridsColumnDoubleValues = elementsList.stream()
                 .map(WebElement::getText).map(Double::parseDouble)
-                .collect(Collectors
-                        .toList());
+                .collect(Collectors.toList());
 
-        return Ordering
-                .natural()
+        return Ordering.natural()
                 .reverse()
                 .isOrdered(gridsColumnDoubleValues);
     }
 
     public final static boolean isListDoubleSortedByAscent(final List<WebElement> elementsList) {
 
-       final List<Double> gridsColumnDoubleValues = elementsList
-                .stream()
-                .map(WebElement::getText).map(Double::parseDouble)
-                .collect(Collectors
-                        .toList());
+        final List<Double> gridsColumnDoubleValues = elementsList.stream()
+                .map(WebElement::getText)
+                .map(Double::parseDouble)
+                .collect(Collectors.toList());
 
-        return Ordering
-                .natural()
+        return Ordering.natural()
                 .isOrdered(gridsColumnDoubleValues);
     }
 }
